# personal-memory-mcp

./: .gitignore  CLAUDE.md  README.md  memory_server.py  pyproject.toml
tests/: test_memory_server.py
